# mcp-pfsense

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-05-07-pfsense-mcp.md
docs/superpowers/specs/: 2026-05-07-pfsense-baseline-config-design.md  2026-05-07-pfsense-mcp-design.md
src/firewall_mcp/: __main__.py  server.py  ssh_client.py
src/firewall_mcp/configure/: _php.py  dhcp.py  dns.py  hardware.py
src/firewall_mcp/tools/: firewall.py  interfaces.py  raw.py  services.py  system.py
tests/: conftest.py  test_configure_dhcp.py  test_configure_dns.py  test_configure_hardware.py  test_firewall.py  test_integration.py  test_interfaces.py  test_raw.py  test_server.py  test_services.py  test_ssh_client.py  test_system.py
